# llamaindex-rag-assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/: config.py  ingest.py  query.py
